# manual_pdf_accessibility_checker

./: .gitignore  LICENSE  README.md  check_pdf.py  create_badly_encoded_pdf.py  pyproject.toml
