[project]
name = "manual-pdf-accessibility-checker"
version = "0.1.0"
description = "A tool for checking PDF accessibility"
authors = [{name = "Justin Uhr", email = "justin_uhr@brown.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pikepdf>=10.0.3",
    "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
dev = [

]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
